Alignment issues on the powerpage fixed as per client needs

--- a/app/common/stylesheets/application.css
+++ b/app/common/stylesheets/application.css
@@ -75,6 +75,20 @@
     width: 100%;
 }
 
+.food-tile-align{
+  /*margin: 0 auto;*/
+  float: left;
+  padding-right: 4px;
+  width: 33%;
+  /*height: 100px;*/
+
+
+}
+.align-images li{
+  display: inline;
+  padding-top: 20px; 
+}
+
 .power_tile{
     float: right;
     width: 48%;
@@ -127,5 +141,5 @@
 }
 
 .powermeter {
-    max-width: 100%;
+    width: 100%;
 }
